Fix logo width value in css, add some br

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     </div>
   </div>
   <div class="container">
-  CUSTOM SOFTWARE DEVELOPMENT - iOS, OS X
+  <br />CUSTOM SOFTWARE DEVELOPMENT - iOS, OS X
+  <br />
   <br />
   <br /><b>Ninety Edges s.r.o.</b>
   <br />with registered seat at (se sídlem na adrese)
