--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="container">
-  <br />CUSTOM SOFTWARE DEVELOPMENT - iOS, OS X
+  <br />CUSTOM SOFTWARE DEVELOPMENT - iOS, macOS
   <br />
   <br />
   <br /><b>Ninety Edges s.r.o.</b>
