remove CUSTOM and add Windows

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="container">
-  <br />CUSTOM SOFTWARE DEVELOPMENT - iOS, macOS
+  <br />SOFTWARE DEVELOPMENT - iOS, macOS, Windows
   <br />
   <br />
   <br /><b>Ninety Edges s.r.o.</b>
